--- 2.1.2 2010-12-19 ---
*** common changes ***
* Completed the transition to the 0.770 kernel.
* Broken support for Lua-scripts. Build the program with -DLUA_SCRIPT=OFF.
*** eiskaltdcpp-qt ***
* Fixed parsing of emoticons in new messages. Now more fast and correct.
* Improvements in the search widget.
* Highlight duplicates in share.
* Implemented blacklist for search results.
* Added separator (horizontal line) for unread messages in the chat.
* Added an option of the connection type in the favorite hubs settings.
* Added a speed limit button to the tools panel.
* Added ability of redirecting new personal messages to the main chat.
* Now you can set share restrictions in the share browser widget. Just open own file list and use the menu.
*** eiskaltdcpp-gtk ***
* Improvements in the search widget.
* Fixed path to lock file of launched program (it was ~/.dc++/). Now it launches only one instance of the DC-client and magnet-links are correctly intercepted by it.
* Added hot keys Left/Right to expand the directory tree in the widget view a list of files.

--- 2.1.1 2010-11-21 ---
*** common changes ***
* Fixed TigerHash for ARM architecture.
* -DUSE_MINIUPNP is set to OFF by default.
* Fixed issue with blocking ports on restarting the program.
* Added ability to use pcre library for regex in perl style (see option PERL_REGEX in file INSTALL). Currently it uses only in ADL Search.
*** eiskaltdcpp-qt ***
* Fixed crash when deleting last characters in the input field of the chat by using the Backspace. (The problem manifested only with Qt 4.7.1)
* Optimized link parser. Very long new chat messages are displayed much faster.
* Fixed opening torrent's magnet links from chat.
* Added ability to forced change the background color in the chat.
* Fixed wrong icon path for App Bundle in Mac OS X. (The problem was added in 2.1.0)
* BBСode support in the chat ([b][/b], [u][/u], [i][/i]).
* Support for *bold* and _underlined_ text like in Psi.
*** eiskaltdcpp-gtk ***