@@ -94,3 +94,9 @@ Translators
  Martin Durisin
  <martin.durisin@gmail.com>
  (for 2.1.0 and later)
+
+ Czech translation
+
+ Uhlik
+ <uhlikx@seznam.cz>
+ (for 2.1.2 and later)
