@@ -2,6 +2,7 @@
 *** common changes ***
 * Закончен переход на ядро 0.770.
 * Сломана поддержка Lua-скриптов. Собирайте программу с -DLUA_SCRIPT=OFF.
+* Благодаря Uhlik доступен чешский перевод.
 *** eiskaltdcpp-qt ***
 * Исправлена обработка смайлов в новых сообщениях. Теперь быстрее и корректнее.
 * Улучшения в виджете поиска.
