@@ -2,6 +2,7 @@
 *** common changes ***
 * Закінчено перехід на ядро 0.770.
 * Зламана підтримка Lua-скриптів. Збирайте програму з -DLUA_SCRIPT=OFF.
+* Завдяки Uhlik доступний чеський переклад.
 *** eiskaltdcpp-qt ***
 * Виправлена обробка смайлів в нових повідомленнях. Тепер швидше і коректніше.
 * Покращення у віджетi пошуку.
