@@ -1023,6 +1023,9 @@ Contributors
 
  Martin Durisin
  (martin.durisin@gmail.com)
+
+ Uhlik
+ (uhlikx@seznam.cz)
 </property>
     <property name="wrap_license">True</property>
     <child internal-child="vbox">
