@@ -2516,7 +2516,13 @@ void MainWindow::slotAboutClient(){
             tr("<br/>"
                "&nbsp;Martin Durisin<br/>"
                "&nbsp;&lt;martin.durisin@gmail.com&gt;<br/>"
-               "&nbsp;(for 2.1.0 and later)<br/>")
+               "&nbsp;(for 2.1.0 and later)<br/>")+
+            tr("<br/>"
+               "&nbsp;<u>Slovak translation</u><br/>")+
+            tr("<br/>"
+               "&nbsp;Uhlik<br/>"
+               "&nbsp;&lt;uhlikx@seznam.cz&gt;<br/>"
+               "&nbsp;(for 2.1.2 and later)<br/>")
             );
 
     a.exec();
